# chat-api

./: .gitignore  Cargo.toml  Dockerfile
migrations/: 20241130065600_user.sql  20241201134431_tables.sql
src/: friend.rs  main.rs  message.rs  room.rs  types.rs  user.rs
src/friend/: add.rs  delete.rs  get.rs  mod.rs
src/message/: get.rs  mod.rs  send.rs
src/room/: create.rs  get.rs  mod.rs
src/user/: create.rs  info.rs  login.rs  mod.rs  search.rs
